# autoplay.ai

./: CMakeLists.txt  mod.json
.github/workflows/: build.yml
src/: main.cpp
